--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-scikit-learn
-pandas 
-numpy
-streamlit 
+streamlit>=1.28.0
+transformers>=4.30.0
+torch>=2.0.0
+sentencepiece>=0.1.99
+protobuf>=3.20.0
+accelerate>=0.20.0
